version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/Mechanical/DataModel/SolverData/MAPDLContactData.rst.txt
.. vale off



:class:`MAPDLContactData`
=========================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.Mechanical.DataModel.SolverData.MAPDLContactData(id: int, obj: Ansys.Common.Interop.DSObjectsAuto.IDSSolutionSummaryAuto, rowId: int)

   Bases: :py:obj:`object`



.. py:currentmodule:: MAPDLContactData

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~SourceId`
            - Gets the Source Id of the Contact region.
          * - :py:attr:`~TargetId`
            - Gets the Target Id of the Contact region.







Property detail
---------------
.. py:property:: SourceId
   :type: Optional[int]


   
   Gets the Source Id of the Contact region.
















   ..
       !! processed by numpydoc !!

.. py:property:: TargetId
   :type: Optional[int]


   
   Gets the Target Id of the Contact region.
















   ..
       !! processed by numpydoc !!







.. vale on