version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/DataModel/SolverData/MAPDLContactData.rst.txt
.. vale off



:class:`MAPDLContactData`
=========================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.Mechanical.DataModel.SolverData.MAPDLContactData(id: int, obj: Ansys.Common.Interop.DSObjectsAuto.IDSSolutionSummaryAuto, rowId: int)

   Bases: :py:obj:`object`



.. py:currentmodule:: MAPDLContactData

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~SourceId`
            - Gets the Source Id of the Contact region.
          * - :py:attr:`~TargetId`
            - Gets the Target Id of the Contact region.







Property detail
---------------
.. py:property:: SourceId
   :type: Optional[int]


   
   Gets the Source Id of the Contact region.
















   ..
       !! processed by numpydoc !!

.. py:property:: TargetId
   :type: Optional[int]


   
   Gets the Target Id of the Contact region.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on